# csprimer

./: LICENSE.md  README.md  todo.txt
bits_and_bytes/beep_beep/: beep_beep.ml
bits_and_bytes/css_color_convert/: LICENSE.md  README.md  css_color_convert.opam  dune-project  run_tests.fish
bits_and_bytes/image_rotate/: .ocamlformat  LICENSE.md  README.md  dune  dune-project  dune-workspace  image_rotate.ml  image_rotate.opam
bits_and_bytes/image_rotate/lib/: dune
bits_and_bytes/image_rotate/test/: dune  test.ml
bits_and_bytes/sneaky_nan/: LICENSE.md  README.md  sneaky_nan.py
bits_and_bytes/tcp_syn_flood/: CHANGES.md  LICENSE.md  README.md  dune-project  tcp_syn_flood.opam
bits_and_bytes/tcp_syn_flood/test/: dune  test.ml
bits_and_bytes/utf8_truncate/: LICENSE.md  README.md  dune-project  utf8_truncate.opam
bits_and_bytes/utf8_truncate/utf8-truncate/: cases  expected  readme.md
bits_and_bytes/varint/: README.md  csprimer_varint.opam  dune-project
bits_and_bytes/varint/lib/: csprimer_varint.ml  dune
bits_and_bytes/varint/test/: dune  test.ml
